--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                       <div class="mb-3">
                         <label for="coupon" class="form-label">Codice sconto (opzionale)</label>
                           <input type="text" class="form-control" id="coupon">
+                          <small id="coupon-result" class="form-text">-</small>
                     </div>
                     <div class="mb-3">
                       <label for="textarea" class="form-label">Textarea con Boostrap 5</label>
@@ -82,11 +83,11 @@
                         <label class="form-check-label" for="privacy">Accetto la Privacy Policy</label>
                     </div>
                 
-                    <div class="container col-md-12 d-flex justify-content-between">
-                      <div div class= "d-flex">
+                    <div class="container mb-3 d-flex justify-content-between">
+                      <div div class= "d-flex ms-5 me-auto">
                         <button type="submit" class="btn btn-primary" >Calcola preventivo</button>
                       </div>
-                      <div class="d-flex flex-column align-items-center">
+                      <div class="d-flex flex-column align-items-center me-5 ms-auto">
                         <div> <b>Prezzo finale </b> </div> 
                         <div id="prezzo" class="prezzo">-----</div>
                       </div>
